[package]
name = "erc721-deployer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs" }
tokio = { version = "1.27.0", features = ["full"] }
serde_json = "1.0.96"
serde_with = "2.3.2"